syntax = "proto3";

package core.backgate;

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}

service Service {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse);
}
